--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ decorator==5.1.1
 Django==4.2
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 exceptiongroup==1.1.3
 executing==2.0.0
 idna==3.4
@@ -28,11 +29,14 @@ parso==0.8.3
 pathspec==0.11.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.1.0
 platformdirs==3.11.0
 prompt-toolkit==3.0.39
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
+PyJWT==2.8.0
+python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
 ruff==0.1.0
