--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 exceptiongroup==1.1.3
 executing==2.0.0
+gunicorn==21.2.0
 idna==3.4
 ipython==8.16.1
 itypes==1.2.0
@@ -32,6 +33,7 @@ pickleshare==0.7.5
 Pillow==10.1.0
 platformdirs==3.11.0
 prompt-toolkit==3.0.39
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
