--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       - "8000:8000"
     env_file:
       - .env.docker
+    entrypoint: sh -c "./manage.py migrate && ./manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
   db:
