--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,12 @@ Django==4.2
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+drf-yasg==1.21.7
 exceptiongroup==1.1.3
 executing==2.0.0
 gunicorn==21.2.0
 idna==3.4
+inflection==0.5.1
 ipython==8.16.1
 itypes==1.2.0
 jedi==0.19.1
@@ -40,6 +42,7 @@ Pygments==2.16.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 requests==2.31.0
 ruff==0.1.0
 simplejson==3.19.2
