--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 decorator==5.1.1
 Django==4.2
+django-jazzmin==2.6.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
