--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
 appnope==0.1.3
 asgiref==3.7.2
 asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
 backcall==0.2.0
 black==23.9.1
 certifi==2023.7.22
@@ -17,6 +21,9 @@ djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
 exceptiongroup==1.1.3
 executing==2.0.0
+factory-boy==3.3.0
+Faker==19.13.0
+frozenlist==1.4.0
 gunicorn==21.2.0
 idna==3.4
 inflection==0.5.1
@@ -26,7 +33,9 @@ jedi==0.19.1
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
+multidict==6.0.4
 mypy-extensions==1.0.0
+openai==0.28.1
 openapi-codec==1.3.2
 packaging==23.2
 parso==0.8.3
@@ -41,6 +50,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.16.1
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -51,8 +61,10 @@ six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
 tomli==2.0.1
+tqdm==4.66.1
 traitlets==5.11.2
 typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.0.6
 wcwidth==0.2.8
+yarl==1.9.2
