--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ charset-normalizer==3.3.0
 click==8.1.7
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==7.3.2
 decorator==5.1.1
 Django==4.2
 django-jazzmin==2.6.0
